[package]
name = "oxojs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.8.1"
reqwest = "0.11.17"
soup = "0.5.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }

[dependencies.simple_logger]
version = "4.1.0"
default-features = false
features = ["colors"]
